[package]
name = "unixconn-rust"
version = "0.1.2"
edition = "2021"

license = "MIT OR Apache-2.0"
description = "Client for library unixconn"
exclude = [
    "/ci/*",
    "/.github/*",
    "/.cirrus.yml",
    "/triagebot.toml",
]
autobins = false
autoexamples = false
autotests = false
autobenches = false

homepage = "https://github.com/dhnikolas/unixconn-rust"
documentation = "https://github.com/dhnikolas/unixconn-rust"
readme = "README.md"
keywords = [
    "bindings",
    "operating",
    "system",
]
categories = [
    "external-ffi-bindings",
    "no-std",
    "os",
]
repository = "https://github.com/dhnikolas/unixconn-rust"

[dependencies]
bytes = "1.5.0"
uuid = { version = "1.10.0", features = ["v4"] }
